# whiteprint

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  README.md  REUSE.toml  SECURITY.md  hatch.toml  hatch_build.py  pyproject.toml  pyrightconfig.json  pytest.ini  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml  pullRequestSizing.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: constraints.txt  container.yml  labeler.yml  pages.yml  pr-labeler.yml  pr-sizing.yml  release.yml  semantic.yml  tests.yml
BOM/: project_dependencies.spdx  project_licenses.spdx  requirements.txt
container/: Containerfile  Containerfile.containerignore
docs/: conf.py  contributing.md  copying.md  dependencies.md  index.md  quickstart.md  requirements.txt  security.md  usage.md
docs/guide/: index.md  project.md  whiteprint.md
src/whiteprint/: __init__.py  console.py  filesystem.py  loc.py  project_manager.py  start_process.py  tox.py  version.py  version_control.py
src/whiteprint/cli/: __init__.py  __main__.py  entrypoint.py  exceptions.py  logging.py
src/whiteprint/cli/commands/: __init__.py  init.py  tool.py
src/whiteprint/locale/: base.pot
src/whiteprint/locale/fr_FR/LC_MESSAGES/: messages.po
tests/: __init__.py  conftest.py
tests/test_python_whiteprint/: __init__.py  test_console.py  test_version.py
tests/test_python_whiteprint/test_cli/: __init__.py  test__click_app.py  test_entrypoint.py  test_environment.py  test_init.py
